# dreamers-keys

./: .gitignore  Cargo.toml  DESIGN.md  README.md
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/src/: main.rs
client/: Cargo.toml
client/src/: game.rs  input.rs  instance.rs  lib.rs  main.rs  network.rs  player.rs  tick.rs
client/src/backend/: local.rs  mod.rs
client/src/graphics/: camera.rs  fragment.glsl  mod.rs  shader.wgsl  sprite_batch.rs  texture.rs  vertex.glsl
common/: Cargo.toml
common/src/: instance.rs  lib.rs  manager_message.rs  message.rs  net_obj.rs  physics.rs  player.rs  result.rs  tick.rs
common/src/game/: character.rs  instance.rs  item.rs  mod.rs
instance/: Cargo.toml
instance-server/: Cargo.toml
instance-server/src/: lib.rs  main.rs  message.rs  player.rs  tick.rs
instance/src/: backend.rs  lib.rs  main.rs  server.rs  tick.rs
login-server/: Cargo.toml
login-server/src/: main.rs
manager/: Cargo.toml
manager/src/: lib.rs  main.rs  message.rs
