[workspace]
resolver = "2"
members = ["common", "instance", "backend", "client"]

[profile.release]
debug = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
hex = "0.4"
env_logger = "0.11"
futures-channel = "0.3"
uuid = { version = "1.16.0", features = ["v7", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
bincode = { version = "2.0.1", features = ["derive", "serde"] }
rand = "0.9"
tokio = { version = "1.0", features = ["full"] }
axum = "0.8.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
renet = "1.0.0"
renet_netcode = "1.0.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1.88"
rapier2d = { version = "0.25.1", features = ["simd-stable"] }
interprocess = "2.2.3"
ctrlc = "3.4.6"
hecs = "0.10.5"
wgpu = { version = "25.0", features = ["glsl"] }
pollster = "0.4"
tracing-log = "0.2"
glfw = { version = "0.59" }
bytemuck = { version = "1.23.0", features = ["derive"] }
puffin = "0.19.0"
puffin_http = "0.16.1"
profiling = { version = "1.0.16", features = ["profile-with-puffin"] }
nalgebra-glm = { version = "0.19" }
nalgebra = { version = "0.33.2", features = ["bytemuck"] }
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
