[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_renet = { workspace = true }
bevy_rapier2d = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }

common = { path = "../common" }
