[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
renet = { workspace = true }
renet_netcode = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
interprocess = { workspace = true }
ctrlc = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
bincode = { workspace = true }
glfw = { workspace = true }
rapier2d = { workspace = true }
bytemuck = { workspace = true }

common = { path = "../common" }
instance = { path = "../instance" }
