[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
uuid = { workspace = true }
bevy = { workspace = true }
bevy_renet = { workspace = true }
bevy_rapier2d = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
