[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
rand = { workspace = true }
renet = { workspace = true }
renet_netcode = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
rapier2d = { workspace = true }
hecs = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
image = { workspace = true }
profiling = { workspace = true }
