[package]
name = "instance"
version = "0.1.0"
edition = "2024"

[dependencies]
renet = { workspace = true }
renet_netcode = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
interprocess = { workspace = true }
rapier2d = { workspace = true }

common = { path = "../common" }
